#  Yarp Modules Manager
#  Copyright: (C) 2011 Istituto Italiano di Tecnologia (IIT)
#  Authors: Ali Paikan <ali.paikan@iit.it>
#
#  Copy Policy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT
#

# yarpmanager

# TODO Figure out what to do with the files in this folder

if(CREATE_LIB_MANAGER)
    add_subdirectory(tests) #should be renamed to xml or templates
endif()


