# Copyright (C) 2006-2021 Istituto Italiano di Tecnologia (IIT)
# All rights reserved.
#
# This software may be modified and distributed under the terms of the
# BSD-3-Clause license. See the accompanying LICENSE file for details.

# yarpmanager

# TODO Figure out what to do with the files in this folder

if(YARP_COMPILE_libYARP_manager)
  add_subdirectory(tests) #should be renamed to xml or templates
endif()
